# nai

./: CMakeLists.txt  clion-opencv.bat
lab1/: main.cpp  main.h
lab2/: lab2.cpp
lab3/: lab3.cpp  lab3.h  odp.md
lab4/: lab4.cpp  lab4.h
lab7/: lab7.cpp  lab7.h
lab8/: lab8.cpp  lab8.h
